Almost half ready

--- a/MephiOSLabs2/MephiOSLabs2.vcxproj
+++ b/MephiOSLabs2/MephiOSLabs2.vcxproj
@@ -92,7 +92,9 @@
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\Users\v-seirin\Desktop\МИФИ_АОС\AOSLabs\MephiOSLabs\include\bits;C:\Users\v-seirin\Desktop\МИФИ_АОС\AOSLabs\MephiOSLabs\include\sys;C:\Users\v-seirin\Desktop\МИФИ_АОС\AOSLabs\MephiOSLabs\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\v-seirin\Desktop\МИФИ_АОС\AOSLabs\MephiOSLabs\include;C:\Users\v-seirin\Desktop\МИФИ_АОС\AOSLabs\MephiOSLabs\include\bits;C:\Users\v-seirin\Desktop\МИФИ_АОС\AOSLabs\MephiOSLabs\include\sys;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalOptions>
+      </AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
