--- a/MephiOSLabs5/MephiOSLabs5.vcxproj
+++ b/MephiOSLabs5/MephiOSLabs5.vcxproj
@@ -89,8 +89,14 @@
     <ClCompile Include="q8.c" />
     <ClCompile Include="q9.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="qhelper.h" />
+  </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile />
+    <ClCompile>
+      <AdditionalIncludeDirectories>C:\Users\v-seirin\Desktop\МИФИ_АОС\AOSLabs\MephiOSLabs\MephiOSLabs5;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
