--- a/MephiOSLabs6/MephiOSLabs6.vcxproj
+++ b/MephiOSLabs6/MephiOSLabs6.vcxproj
@@ -87,6 +87,9 @@
   <ItemGroup>
     <ClInclude Include="game.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test_lab6.sh" />
+  </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <CLanguageStandard>gnu11</CLanguageStandard>
